test/deprecated/extern-classes.good
extern-classes.chpl:2: error: Extern classes are not supported.
