test/deprecated/extern-classes.h

typedef struct {
  int x;
} _C, *C;
